--- a/Homework3/ADA-Homework3.ipynb
+++ b/Homework3/ADA-Homework3.ipynb
@@ -12,7 +12,9 @@
    "metadata": {},
    "source": [
     "To visualise the notebook with the maps, please click on this link : <br>\n",
-    "http://nbviewer.jupyter.org/github/emlg/ada/blob/master/Homework3/ADA-Homework3.ipynb"
+    "http://nbviewer.jupyter.org/github/emlg/ada/blob/master/Homework3/ADA-Homework3.ipynb <br>\n",
+    "\n",
+    "__NOTE__ : Some maps have 2 layers, both are activated, please untick the one you are not interested with."
    ]
   },
   {
