Correct URL for NBViewer

--- a/Project/Project-Milestone-3.ipynb
+++ b/Project/Project-Milestone-3.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# ADA - Project : Understanding EPF Tuition Fee Raise\n",
     "#### Olivier Couque, Emma Lejal Glaude & Matthieu Sauvé\n",
-    "If you want to use the links to jump from one part to the other in this notebook, we provide the NBViewer link : http://nbviewer.jupyter.org/github/emlg/ada/blob/master/Project/Project-Milestone-3.ipynb#M2-content\n",
+    "If you want to use the links to jump from one part to the other in this notebook, we provide the NBViewer link : http://nbviewer.jupyter.org/github/emlg/ada/blob/master/Project/Project-Milestone-3.ipynb\n",
     "\n",
     "Table of content :\n",
     "1. Milestone 1 : Project Proposal (See Readme)\n",
